[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tiles.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://src/Level.gd" type="Script" id=4]
[ext_resource path="res://scenes/Bulb.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Orb.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/dark_atmosphere.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/fonts/murder.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/fonts/default_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/sprites/orb.png" type="Texture" id=10]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.00392157, 0.00392157, 0.0352941, 1 )
sky_horizon_color = Color( 0.0156863, 0.0666667, 0.109804, 1 )
ground_horizon_color = Color( 0, 0, 0, 1 )
sun_latitude = 75.0
sun_curve = 0.00145784
sun_energy = 2.2

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_energy = 0.0
glow_enabled = true
glow_intensity = 0.38
glow_strength = 0.94
glow_bloom = 0.41
glow_blend_mode = 1
glow_hdr_threshold = 0.38
glow_hdr_luminance_cap = 34.97
glow_hdr_scale = 1.49
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 8 )

[node name="Level" type="Spatial"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 1, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 65528, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65534, 0, 1, 65536, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65544, 0, 0, 131063, 0, 0, 131065, 0, 0, 131069, 0, 0, 131071, 0, 0, 196608, 0, 2, 196609, 0, 2, 196610, 0, 2, 196611, 0, 2, 196612, 0, 2, 196613, 0, 2, 196614, 0, 2, 196615, 0, 2, 262135, 0, 2, 262136, 0, 2, 262137, 0, 2, 262138, 0, 2, 262139, 0, 2, 262140, 0, 2, 262141, 0, 2, 262142, 0, 2, 262143, 0, 2, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 7, 1, 1, 65528, 1, 1, 65530, 1, 1, 65532, 1, 1, 65534, 1, 1, 65535, 1, 1, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65544, 1, 0, 131063, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131069, 1, 0, 196608, 1, 2, 196609, 1, 2, 196610, 1, 2, 196611, 1, 2, 196612, 1, 2, 196613, 1, 2, 196614, 1, 2, 262135, 1, 2, 262136, 1, 2, 262137, 1, 2, 262138, 1, 2, 262139, 1, 2, 262140, 1, 2, 262141, 1, 2, 262142, 1, 2, 262143, 1, 2, 1, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 1, 7, 2, 1, 65528, 2, 1, 65529, 2, 1, 65530, 2, 1, 65532, 2, 1, 65533, 2, 1, 65534, 2, 1, 65536, 2, 0, 65538, 2, 0, 65544, 2, 0, 131063, 2, 0, 131067, 2, 0, 131071, 2, 0, 196608, 2, 2, 196609, 2, 2, 196610, 2, 2, 196611, 2, 2, 196612, 2, 2, 196613, 2, 2, 196614, 2, 2, 262135, 2, 2, 262136, 2, 2, 262137, 2, 2, 262138, 2, 2, 262139, 2, 2, 262140, 2, 2, 262141, 2, 2, 262142, 2, 2, 262143, 2, 2, 1, 3, 1, 5, 3, 1, 65528, 3, 1, 65529, 3, 1, 65530, 3, 1, 65536, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 131063, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 196608, 3, 2, 196609, 3, 2, 196610, 3, 2, 196611, 3, 2, 196612, 3, 2, 196613, 3, 2, 196614, 3, 2, 262135, 3, 2, 262136, 3, 2, 262137, 3, 2, 262138, 3, 2, 262139, 3, 2, 262140, 3, 2, 262141, 3, 2, 262142, 3, 2, 262143, 3, 2, 0, 4, 1, 1, 4, 1, 3, 4, 1, 5, 4, 1, 6, 4, 1, 7, 4, 1, 65530, 4, 1, 65532, 4, 1, 65533, 4, 1, 65534, 4, 1, 65535, 4, 1, 65538, 4, 0, 65540, 4, 0, 65544, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 4, 0, 131067, 4, 0, 131070, 4, 0, 196608, 4, 2, 196609, 4, 2, 196610, 4, 2, 196611, 4, 2, 196612, 4, 2, 196613, 4, 2, 196614, 4, 2, 262135, 4, 2, 262136, 4, 2, 262137, 4, 2, 262138, 4, 2, 262139, 4, 2, 262140, 4, 2, 262141, 4, 2, 262142, 4, 2, 262143, 4, 2, 1, 5, 1, 2, 5, 1, 3, 5, 1, 5, 5, 1, 7, 5, 1, 65528, 5, 1, 65530, 5, 1, 65532, 5, 1, 65535, 5, 1, 65536, 5, 0, 65540, 5, 0, 65542, 5, 0, 65544, 5, 0, 131063, 5, 0, 131065, 5, 0, 131067, 5, 0, 131069, 5, 0, 131070, 5, 0, 196608, 5, 2, 196609, 5, 2, 196610, 5, 2, 196611, 5, 2, 196612, 5, 2, 196614, 5, 2, 262135, 5, 2, 262136, 5, 2, 262137, 5, 2, 262138, 5, 2, 262139, 5, 2, 262140, 5, 2, 262141, 5, 2, 262142, 5, 2, 262143, 5, 2, 1, 6, 1, 5, 6, 1, 7, 6, 1, 65528, 6, 1, 65530, 6, 1, 65532, 6, 1, 65533, 6, 1, 65534, 6, 1, 65535, 6, 1, 65536, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65542, 6, 0, 65544, 6, 0, 131063, 6, 0, 131065, 6, 0, 131067, 6, 0, 131069, 6, 0, 196608, 6, 2, 196609, 6, 2, 196610, 6, 2, 196611, 6, 2, 196612, 6, 2, 262135, 6, 2, 262136, 6, 2, 262137, 6, 2, 262138, 6, 2, 262139, 6, 2, 262140, 6, 2, 262141, 6, 2, 262142, 6, 2, 262143, 6, 2, 1, 7, 1, 2, 7, 1, 3, 7, 1, 4, 7, 1, 5, 7, 1, 7, 7, 1, 65528, 7, 1, 65529, 7, 1, 65530, 7, 1, 65531, 7, 1, 65532, 7, 1, 65533, 7, 1, 65534, 7, 1, 65535, 7, 1, 65536, 7, 0, 65542, 7, 0, 65544, 7, 0, 131063, 7, 0, 196608, 7, 2, 196609, 7, 2, 196610, 7, 2, 196611, 7, 2, 196612, 7, 2, 262135, 7, 2, 262136, 7, 2, 262137, 7, 2, 262138, 7, 2, 262139, 7, 2, 262140, 7, 2, 262141, 7, 2, 262142, 7, 2, 262143, 7, 2, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 131063, 8, 0, 131064, 8, 0, 131065, 8, 0, 131066, 8, 0, 131067, 8, 0, 131068, 8, 0, 131069, 8, 0, 131070, 8, 0, 131071, 8, 0, 65536, 65527, 0, 65537, 65527, 0, 65538, 65527, 0, 65539, 65527, 0, 65540, 65527, 0, 65541, 65527, 0, 65542, 65527, 0, 65543, 65527, 0, 65544, 65527, 0, 131063, 65527, 0, 131064, 65527, 0, 131065, 65527, 0, 131066, 65527, 0, 131067, 65527, 0, 131068, 65527, 0, 131069, 65527, 0, 131070, 65527, 0, 131071, 65527, 0, 196608, 65527, 2, 196609, 65527, 2, 196610, 65527, 2, 196611, 65527, 2, 196612, 65527, 2, 196613, 65527, 2, 196614, 65527, 2, 262135, 65527, 2, 262136, 65527, 2, 262137, 65527, 2, 262138, 65527, 2, 262139, 65527, 2, 262140, 65527, 2, 262141, 65527, 2, 262142, 65527, 2, 262143, 65527, 2, 0, 65528, 1, 1, 65528, 1, 2, 65528, 1, 3, 65528, 1, 4, 65528, 1, 5, 65528, 1, 6, 65528, 1, 7, 65528, 1, 65528, 65528, 1, 65529, 65528, 1, 65530, 65528, 1, 65533, 65528, 1, 65534, 65528, 1, 65535, 65528, 1, 65544, 65528, 0, 131063, 65528, 0, 131067, 65528, 0, 131068, 65528, 0, 196608, 65528, 2, 196609, 65528, 2, 196610, 65528, 2, 196611, 65528, 2, 196612, 65528, 2, 196613, 65528, 2, 196614, 65528, 2, 262135, 65528, 2, 262136, 65528, 2, 262137, 65528, 2, 262138, 65528, 2, 262139, 65528, 2, 262140, 65528, 2, 262141, 65528, 2, 262142, 65528, 2, 262143, 65528, 2, 0, 65529, 1, 2, 65529, 1, 5, 65529, 1, 7, 65529, 1, 65528, 65529, 1, 65530, 65529, 1, 65533, 65529, 1, 65535, 65529, 1, 65537, 65529, 0, 65539, 65529, 0, 65540, 65529, 0, 65542, 65529, 0, 65544, 65529, 0, 131063, 65529, 0, 131065, 65529, 0, 131067, 65529, 0, 131068, 65529, 0, 131070, 65529, 0, 196608, 65529, 2, 196609, 65529, 2, 196610, 65529, 2, 196611, 65529, 2, 196612, 65529, 2, 196613, 65529, 2, 196614, 65529, 2, 262135, 65529, 2, 262136, 65529, 2, 262137, 65529, 2, 262138, 65529, 2, 262139, 65529, 2, 262140, 65529, 2, 262141, 65529, 2, 262142, 65529, 2, 262143, 65529, 2, 0, 65530, 1, 2, 65530, 1, 3, 65530, 1, 5, 65530, 1, 7, 65530, 1, 65528, 65530, 1, 65530, 65530, 1, 65532, 65530, 1, 65533, 65530, 1, 65535, 65530, 1, 65537, 65530, 0, 65540, 65530, 0, 65542, 65530, 0, 65544, 65530, 0, 131063, 65530, 0, 131065, 65530, 0, 131067, 65530, 0, 131070, 65530, 0, 196608, 65530, 2, 196609, 65530, 2, 196610, 65530, 2, 196611, 65530, 2, 196612, 65530, 2, 196613, 65530, 2, 196614, 65530, 2, 262135, 65530, 2, 262136, 65530, 2, 262137, 65530, 2, 262138, 65530, 2, 262139, 65530, 2, 262140, 65530, 2, 262141, 65530, 2, 262142, 65530, 2, 262143, 65530, 2, 0, 65531, 1, 3, 65531, 1, 5, 65531, 1, 7, 65531, 1, 65528, 65531, 1, 65530, 65531, 1, 65532, 65531, 1, 65535, 65531, 1, 65537, 65531, 0, 65538, 65531, 0, 65540, 65531, 0, 65542, 65531, 0, 65544, 65531, 0, 131063, 65531, 0, 131065, 65531, 0, 131067, 65531, 0, 131069, 65531, 0, 131070, 65531, 0, 196608, 65531, 2, 196609, 65531, 2, 196610, 65531, 2, 196611, 65531, 2, 196612, 65531, 2, 196613, 65531, 2, 196614, 65531, 2, 262135, 65531, 2, 262136, 65531, 2, 262137, 65531, 2, 262138, 65531, 2, 262139, 65531, 2, 262140, 65531, 2, 262141, 65531, 2, 262142, 65531, 2, 262143, 65531, 2, 0, 65532, 1, 1, 65532, 1, 3, 65532, 1, 4, 65532, 1, 5, 65532, 1, 7, 65532, 1, 65528, 65532, 1, 65530, 65532, 1, 65531, 65532, 1, 65532, 65532, 1, 65534, 65532, 1, 65535, 65532, 1, 65538, 65532, 0, 65542, 65532, 0, 65544, 65532, 0, 131063, 65532, 0, 131065, 65532, 0, 131069, 65532, 0, 196608, 65532, 2, 196609, 65532, 2, 196610, 65532, 2, 196611, 65532, 2, 196612, 65532, 2, 196613, 65532, 2, 196614, 65532, 2, 262135, 65532, 2, 262136, 65532, 2, 262137, 65532, 2, 262138, 65532, 2, 262139, 65532, 2, 262140, 65532, 2, 262141, 65532, 2, 262142, 65532, 2, 262143, 65532, 2, 1, 65533, 1, 7, 65533, 1, 65528, 65533, 1, 65534, 65533, 1, 65536, 65533, 0, 65538, 65533, 0, 65539, 65533, 0, 65540, 65533, 0, 65541, 65533, 0, 65542, 65533, 0, 65544, 65533, 0, 131063, 65533, 0, 131065, 65533, 0, 131066, 65533, 0, 131067, 65533, 0, 131068, 65533, 0, 131069, 65533, 0, 131071, 65533, 0, 196608, 65533, 2, 196609, 65533, 2, 196610, 65533, 2, 196611, 65533, 2, 196612, 65533, 2, 196613, 65533, 2, 196614, 65533, 2, 262135, 65533, 2, 262136, 65533, 2, 262137, 65533, 2, 262138, 65533, 2, 262139, 65533, 2, 262140, 65533, 2, 262141, 65533, 2, 262142, 65533, 2, 262143, 65533, 2, 0, 65534, 1, 1, 65534, 1, 2, 65534, 1, 3, 65534, 1, 4, 65534, 1, 5, 65534, 1, 6, 65534, 1, 7, 65534, 1, 65527, 65534, 1, 65528, 65534, 1, 65529, 65534, 1, 65530, 65534, 1, 65531, 65534, 1, 65532, 65534, 1, 65533, 65534, 1, 65534, 65534, 1, 65535, 65534, 1, 65544, 65534, 0, 131063, 65534, 0, 196608, 65534, 2, 196609, 65534, 2, 196610, 65534, 2, 196611, 65534, 2, 196612, 65534, 2, 196613, 65534, 2, 196614, 65534, 2, 262135, 65534, 2, 262136, 65534, 2, 262137, 65534, 2, 262138, 65534, 2, 262139, 65534, 2, 262140, 65534, 2, 262141, 65534, 2, 262142, 65534, 2, 262143, 65534, 2, 1, 65535, 1, 5, 65535, 1, 65527, 65535, 1, 65528, 65535, 1, 65530, 65535, 1, 65534, 65535, 1, 65536, 65535, 0, 65538, 65535, 0, 65539, 65535, 0, 65540, 65535, 0, 65542, 65535, 0, 65543, 65535, 0, 65544, 65535, 0, 131063, 65535, 0, 131065, 65535, 0, 131067, 65535, 0, 131068, 65535, 0, 131069, 65535, 0, 131071, 65535, 0, 196608, 65535, 2, 196609, 65535, 2, 196610, 65535, 2, 196611, 65535, 2, 196612, 65535, 2, 196613, 65535, 2, 196614, 65535, 2, 262135, 65535, 2, 262136, 65535, 2, 262137, 65535, 2, 262138, 65535, 2, 262139, 65535, 2, 262140, 65535, 2, 262141, 65535, 2, 262142, 65535, 2, 262143, 65535, 2 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 3, 0 )
}

[node name="Lights" type="Spatial" parent="GridMap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="Light" parent="GridMap/Lights" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.613, 5.5, -4.075 )
omni_attenuation = 2.0

[node name="Light2" parent="GridMap/Lights" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.788, 5.5, -16.1094 )
omni_attenuation = 2.0

[node name="Light3" parent="GridMap/Lights" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.0562, 5.5, 7.723 )
omni_attenuation = 2.0

[node name="Player" parent="GridMap" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.78981, 0.936427, -7.40774 )

[node name="Monster" parent="GridMap" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1.2, 5 )

[node name="Orbs" type="Spatial" parent="GridMap"]

[node name="Orb" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.129, 2, 0 )

[node name="Orb2" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 2, -7 )

[node name="Orb3" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 2, -7 )

[node name="Orb4" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 2, 11 )

[node name="Orb5" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 2, 15 )

[node name="Orb6" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 2, 9 )

[node name="Orb7" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2, 1 )

[node name="Orb8" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 2, 1 )

[node name="Orb9" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, 9 )

[node name="Orb10" parent="GridMap/Orbs" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3895, 2, 5.19442 )

[node name="DarkAtmosphere" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 202.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "MazingDark	"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/VBoxContainer/CenterContainer"]
margin_left = 436.0
margin_top = 107.0
margin_right = 587.0
margin_bottom = 191.0

[node name="MainMenuButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 151.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 9 )
text = "Main Menu"
flat = true

[node name="QuitGameButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 151.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 9 )
text = "Quit Game"
flat = true

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD"]
anchor_right = 1.0
margin_bottom = 106.0

[node name="OrbsLabel" type="Label" parent="CanvasLayer/HUD/VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 73.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = "10/10	"
align = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer/HUD/VBoxContainer/OrbsLabel"]
anchor_left = 0.5
anchor_top = 2.382
anchor_right = 0.5
anchor_bottom = 2.382
margin_left = -512.0
margin_top = 0.0119934
margin_right = 512.0
margin_bottom = 0.0119934

[node name="Sprite" type="Sprite" parent="CanvasLayer/HUD/VBoxContainer/OrbsLabel/AspectRatioContainer"]
position = Vector2( 439, -78.674 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Timer" type="Timer" parent="CanvasLayer/HUD"]
wait_time = 2.0
one_shot = true
